# Waiter-client-auth

./: Cargo.toml  README.md
src/: lib.rs  utils.rs
tests/: web.rs
waiter-client-auth-macros/: Cargo.toml
waiter-client-auth-macros/src/: lib.rs
