[package]
name = "waiter-client-auth"
version = "0.1.0"
authors = ["Systool <systool@magisystem.xyz>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.63", features=["serde-serialize"] }
serde_json = "*"
dotenv_codegen = "^0.15.0"
jwt = "^0.10.0"
hmac = "*"
sha2 = "*"
js-sys = "^0.3.45"
lazy_static = "~1.4.0"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
console_error_panic_hook = "0.1.6"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
